; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_utilcmd.c_get_opclass.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/parser/extr_parse_utilcmd.c_get_opclass.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }

@NIL = common dso_local global i32* null, align 8
@CLAOID = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"cache lookup failed for opclass %u\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i64, i64)* @get_opclass to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_opclass(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_2__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %10 = load i32*, i32** @NIL, align 8
  store i32* %10, i32** %5, align 8
  %11 = load i32, i32* @CLAOID, align 4
  %12 = load i64, i64* %3, align 8
  %13 = call i32 @ObjectIdGetDatum(i64 %12)
  %14 = call i32 @SearchSysCache1(i32 %11, i32 %13)
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @HeapTupleIsValid(i32 %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %22, label %18

18:                                               ; preds = %2
  %19 = load i32, i32* @ERROR, align 4
  %20 = load i64, i64* %3, align 8
  %21 = call i32 @elog(i32 %19, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i64 %20)
  br label %22

22:                                               ; preds = %18, %2
  %23 = load i32, i32* %6, align 4
  %24 = call i64 @GETSTRUCT(i32 %23)
  %25 = inttoptr i64 %24 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %25, %struct.TYPE_2__** %7, align 8
  %26 = load i64, i64* %4, align 8
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 2
  %29 = load i32, i32* %28, align 4
  %30 = call i64 @GetDefaultOpClass(i64 %26, i32 %29)
  %31 = load i64, i64* %3, align 8
  %32 = icmp ne i64 %30, %31
  br i1 %32, label %33, label %48

33:                                               ; preds = %22
  %34 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = call i8* @get_namespace_name(i32 %36)
  store i8* %37, i8** %8, align 8
  %38 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = call i32 @NameStr(i32 %40)
  %42 = call i8* @pstrdup(i32 %41)
  store i8* %42, i8** %9, align 8
  %43 = load i8*, i8** %8, align 8
  %44 = call i32 @makeString(i8* %43)
  %45 = load i8*, i8** %9, align 8
  %46 = call i32 @makeString(i8* %45)
  %47 = call i32* @list_make2(i32 %44, i32 %46)
  store i32* %47, i32** %5, align 8
  br label %48

48:                                               ; preds = %33, %22
  %49 = load i32, i32* %6, align 4
  %50 = call i32 @ReleaseSysCache(i32 %49)
  %51 = load i32*, i32** %5, align 8
  ret i32* %51
}

declare dso_local i32 @SearchSysCache1(i32, i32) #1

declare dso_local i32 @ObjectIdGetDatum(i64) #1

declare dso_local i32 @HeapTupleIsValid(i32) #1

declare dso_local i32 @elog(i32, i8*, i64) #1

declare dso_local i64 @GETSTRUCT(i32) #1

declare dso_local i64 @GetDefaultOpClass(i64, i32) #1

declare dso_local i8* @get_namespace_name(i32) #1

declare dso_local i8* @pstrdup(i32) #1

declare dso_local i32 @NameStr(i32) #1

declare dso_local i32* @list_make2(i32, i32) #1

declare dso_local i32 @makeString(i8*) #1

declare dso_local i32 @ReleaseSysCache(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
